chore:  Compose 编译器生成的字节码与 Java 21 不兼容处理